--- a/Grid1.html
+++ b/Grid1.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
-    <link href="css/site.css" rel="stylesheeets">
+    <link href="css/site.css" rel="stylesheet">
 </head>
 
 <body class="d-flex flex-column h-100">
@@ -61,9 +61,22 @@
 </nav>
 
     <main class="flex-shrink-0">
-       <div class="container">
+        <div class="container h-100 minHeight">
+            <div class="row row-cols-1 row-cols-md-2 gy-2 h-100">
+                <div class="col">
+                    <div class="bg-dark text-light h-100 p-2">
+                        <h1>COL ONE</h1>
+                        <p>Lorem ipsum dolor sit amet. Vel corrupti dolorum qui nesciunt omnis <em>In maiores aut officiis ipsam</em>. Et excepturi amet sit iure undeest sequi ex harum quia. Et ipsum iusto qui impedit quod sit illum quam sed asperiores quasi qui voluptatem blanditiis! Et illum neque ut adipisci iusto sed officia quibusdam qui magni impedit est molestiae voluptatum et dolores cumque et voluptas consequatur! </p><p>Aut iusto iure aut delectus dignissimos <em>Sed dolorem hic neque eveniet qui saepe quod eos quia iusto</em>. Eos expedita quam qui voluptatem dolorem non praesentium voluptate qui unde reiciendis. Vel aliquam dolores eum voluptas dolores vel sequi laborum. Et similique nostrum et voluptatum illum id perferendis illo ut corrupti aliquid in quia consequatur est magnam odio cum cupiditate maxime! </p><p>Aut consequatur repellat qui debitis tempora eum sunt impedit et dignissimos quas ea recusandae eaque. Et quisquam obcaecati qui dicta necessitatibus <em>Ea enim et nobis pariatur</em> est amet itaque qui corporis illo et magnam quia. Id Quis inventore <strong>In saepe non exercitationem consequatur eum quasi ratione</strong> et odio similique! </p>
 
-       </div>
+                    </div> 
+                </div>
+                <div class="col">
+                    <div class="bg-secondary text-light h-100 p-2">
+                        <h1>COL TWO</h1>                   
+                    </div> 
+                </div>
+            </div>
+        </div>
     </main>
     <footer class="footer mt-auto py-3 bg-dark sticky-footer">
         <div class="container-fluid text-center">
