--- a/Grid2.html
+++ b/Grid2.html
@@ -61,16 +61,16 @@
 </nav>
 
     <main class="flex-shrink-0">
-       <div class="container">
-           <div class="row">
-               <div class="col">
-                   <div>
-                       
+       <div class="container h-100 minHeight">
+           <div class="row h-100">
+               <div class="col-3">
+                   <div class="bg-secondary text-light h-100">
+                       <h5>Side Nav</h5>
                    </div>
                </div>
-               <div class="col">
-                   <div>
-                       
+               <div class="col-9">
+                   <div class="bg-dark text-light h-100">
+                       <h5>Main Content</h5>
                    </div>
                </div>
            </div>
