--- a/Grid3.html
+++ b/Grid3.html
@@ -62,7 +62,19 @@
 
     <main class="flex-shrink-0">
        <div class="container">
-
+           <div class="row">
+               <div class="col">
+                   <div></div>
+               </div>
+               <div class="col">
+                   <div class="row">
+                       <div></div>
+                   </div>
+                   <div class="row">
+                       <div></div>
+                   </div>
+               </div>
+           </div>
        </div>
     </main>
     <footer class="footer mt-auto py-3 bg-dark sticky-footer">
