--- a/Grid3.html
+++ b/Grid3.html
@@ -61,17 +61,31 @@
 </nav>
 
     <main class="flex-shrink-0">
-       <div class="container">
-           <div class="row">
-               <div class="col">
-                   <div></div>
-               </div>
-               <div class="col">
-                   <div class="row">
-                       <div></div>
+       <div class="container h-100 minHeight">
+           <div class="row h-100">
+               <!--LEFT COLUMN-->
+               <div class="col-7">
+                   <div class="bg-secondary text-light p-2 h-100">
+                       <h1>Article Title</h1>
+                       <p>Lorem ipsum dolor sit amet. Eos fugiat libero et necessitatibus iste et Quis ducimus id quas architecto qui eligendi sunt sit rerum iste et magnam quia! Aut assumenda dicta <strong>Est suscipit qui esse inventore cum reiciendis voluptas</strong> cum nisi magnam eos omnis cumque! Aut blanditiis internos quo culpa quos <em>Ut sapiente</em>. </p>
+                       <p>Lorem ipsum dolor sit amet. Eos fugiat libero et necessitatibus iste et Quis ducimus id quas architecto qui eligendi sunt sit rerum iste et magnam quia! Aut assumenda dicta <strong>Est suscipit qui esse inventore cum reiciendis voluptas</strong> cum nisi magnam eos omnis cumque! Aut blanditiis internos quo culpa quos <em>Ut sapiente</em>. </p>
+                       <p>Lorem ipsum dolor sit amet. Eos fugiat libero et necessitatibus iste et Quis ducimus id quas architecto qui eligendi sunt sit rerum iste et magnam quia! Aut assumenda dicta <strong>Est suscipit qui esse inventore cum reiciendis voluptas</strong> cum nisi magnam eos omnis cumque! Aut blanditiis internos quo culpa quos <em>Ut sapiente</em>. </p>
                    </div>
-                   <div class="row">
-                       <div></div>
+               </div>
+               <!--RIGHT COLUMN-->
+               <div class="col-5 h-100 d-flex flex-column justify-content-evenly">
+                   <!--RIGHT TOP COLUMN-->
+                   <div class="bg-dark text-light h-50 p-2 overflow-auto">
+                        <p>Lorem ipsum dolor sit amet. Eos fugiat libero et necessitatibus iste et Quis ducimus id quas architecto qui eligendi sunt sit rerum iste et magnam quia! Aut assumenda dicta <strong>Est suscipit qui esse inventore cum reiciendis voluptas</strong> cum nisi magnam eos omnis cumque! Aut blanditiis internos quo culpa quos <em>Ut sapiente</em>. </p>
+                        <p>Lorem ipsum dolor sit amet. Eos fugiat libero et necessitatibus iste et Quis ducimus id quas architecto qui eligendi sunt sit rerum iste et magnam quia! Aut assumenda dicta <strong>Est suscipit qui esse inventore cum reiciendis voluptas</strong> cum nisi magnam eos omnis cumque! Aut blanditiis internos quo culpa quos <em>Ut sapiente</em>. </p>
+                   </div>
+                   <!--RIGHT BOTTOM COLUMN-->
+                   <div class="bg-dark text-light h-50 mt-2 p-2 overflow-hidden">
+                       <p>Lorem ipsum dolor sit amet. Eos fugiat libero et necessitatibus iste et Quis ducimus id quas architecto qui eligendi sunt sit rerum iste et magnam quia! Aut assumenda dicta <strong>Est suscipit qui esse inventore cum reiciendis voluptas</strong> cum nisi magnam eos omnis cumque! Aut blanditiis internos quo culpa quos <em>Ut sapiente</em>. </p>
+                       <p>Lorem ipsum dolor sit amet. Eos fugiat libero et necessitatibus iste et Quis ducimus id quas architecto qui eligendi sunt sit rerum iste et magnam quia! Aut assumenda dicta <strong>Est suscipit qui esse inventore cum reiciendis voluptas</strong> cum nisi magnam eos omnis cumque! Aut blanditiis internos quo culpa quos <em>Ut sapiente</em>. </p>
+                   </div>
+                   <div class="bg-dark text-light border border-top p-2">
+                       <button class="btn btn-light" type="button">Read More</button>
                    </div>
                </div>
            </div>
