Add sub navigation

--- a/Grid3.html
+++ b/Grid3.html
@@ -62,6 +62,14 @@
 
     <main class="flex-shrink-0">
        <div class="container h-100 minHeight">
+           <ul class="nav nav-pills mb-1">
+                <li class="nav-item">
+                    <a href="Grid3.html" class="nav-link active" aria-current="page">Grid 3</a>
+                </li>
+                <li class="nav-item">
+                    <a href="Grid3b.html" class="nav-link">Grid 3B</a>
+                </li>
+           </ul>
            <div class="row h-100">
                <!--LEFT COLUMN-->
                <div class="col-7">
