--- a/Grid3b.html
+++ b/Grid3b.html
@@ -81,19 +81,18 @@
                    </div>
                </div>
                <!--RIGHT COLUMN-->
-               <div class="col-5 h-100 d-flex flex-column justify-content-evenly">
+               <div class="col-5">
                    <!--RIGHT TOP COLUMN-->
-                   <div class="bg-dark text-light h-50 p-2 overflow-auto">
-                        <p>Lorem ipsum dolor sit amet. Eos fugiat libero et necessitatibus iste et Quis ducimus id quas architecto qui eligendi sunt sit rerum iste et magnam quia! Aut assumenda dicta <strong>Est suscipit qui esse inventore cum reiciendis voluptas</strong> cum nisi magnam eos omnis cumque! Aut blanditiis internos quo culpa quos <em>Ut sapiente</em>. </p>
-                        <p>Lorem ipsum dolor sit amet. Eos fugiat libero et necessitatibus iste et Quis ducimus id quas architecto qui eligendi sunt sit rerum iste et magnam quia! Aut assumenda dicta <strong>Est suscipit qui esse inventore cum reiciendis voluptas</strong> cum nisi magnam eos omnis cumque! Aut blanditiis internos quo culpa quos <em>Ut sapiente</em>. </p>
+                   <div class="bg-secondary text-light p-2">
+                       <form class="d-flex">
+                           <input class="form-control me-2" type="search" placeholder="search" aria-label="search">
+                           <button class="btn btn-outline-light" type="submit">Search</button>
+                       </form>
                    </div>
                    <!--RIGHT BOTTOM COLUMN-->
                    <div class="bg-dark text-light h-50 mt-2 p-2 overflow-hidden">
                        <p>Lorem ipsum dolor sit amet. Eos fugiat libero et necessitatibus iste et Quis ducimus id quas architecto qui eligendi sunt sit rerum iste et magnam quia! Aut assumenda dicta <strong>Est suscipit qui esse inventore cum reiciendis voluptas</strong> cum nisi magnam eos omnis cumque! Aut blanditiis internos quo culpa quos <em>Ut sapiente</em>. </p>
                        <p>Lorem ipsum dolor sit amet. Eos fugiat libero et necessitatibus iste et Quis ducimus id quas architecto qui eligendi sunt sit rerum iste et magnam quia! Aut assumenda dicta <strong>Est suscipit qui esse inventore cum reiciendis voluptas</strong> cum nisi magnam eos omnis cumque! Aut blanditiis internos quo culpa quos <em>Ut sapiente</em>. </p>
-                   </div>
-                   <div class="bg-dark text-light border border-top p-2">
-                       <button class="btn btn-light" type="button">Read More</button>
                    </div>
                </div>
            </div>
