Build Grid 3B page
Add sidebar navigation menu

--- a/Grid3b.html
+++ b/Grid3b.html
@@ -90,9 +90,19 @@
                        </form>
                    </div>
                    <!--RIGHT BOTTOM COLUMN-->
-                   <div class="bg-dark text-light h-50 mt-2 p-2 overflow-hidden">
-                       <p>Lorem ipsum dolor sit amet. Eos fugiat libero et necessitatibus iste et Quis ducimus id quas architecto qui eligendi sunt sit rerum iste et magnam quia! Aut assumenda dicta <strong>Est suscipit qui esse inventore cum reiciendis voluptas</strong> cum nisi magnam eos omnis cumque! Aut blanditiis internos quo culpa quos <em>Ut sapiente</em>. </p>
-                       <p>Lorem ipsum dolor sit amet. Eos fugiat libero et necessitatibus iste et Quis ducimus id quas architecto qui eligendi sunt sit rerum iste et magnam quia! Aut assumenda dicta <strong>Est suscipit qui esse inventore cum reiciendis voluptas</strong> cum nisi magnam eos omnis cumque! Aut blanditiis internos quo culpa quos <em>Ut sapiente</em>. </p>
+                   <div class="bg-dark text-light mt-2 p-2">
+                       <h5>More Articles</h5>
+                       <ul class="nav flex-column">
+                           <li class="nav-item">
+                               <a class="nav-link" href="#">Article One</a>
+                           </li>
+                           <li class="nav-item">
+                               <a class="nav-link" href="#">Article Two</a>
+                           </li>
+                           <li class="nav-item">
+                               <a class="nav-link" href="#">Article Three</a>
+                           </li>
+                       </ul>
                    </div>
                </div>
            </div>
