Implement desktop layout

--- a/Grid4.html
+++ b/Grid4.html
@@ -61,16 +61,16 @@
 </nav>
 
     <main class="flex-shrink-0">
-       <div class="container">
-           <div class="row">
+       <div class="container h-100 minHeight">
+           <div class="row h-100">
                <div class="col">
-                   <div></div>
+                   <div class="bg-secondary text-light h-100">Col One</div>
                </div>
                <div class="col">
-                   <div></div>
+                   <div class="bg-dark text-light h-100">Col Two</div>
                </div>
                <div class="col">
-                   <div></div>
+                   <div class="bg-secondary text-light h-100">Col Three</div>
                </div>
            </div>
        </div>
