--- a/Grid4.html
+++ b/Grid4.html
@@ -62,7 +62,7 @@
 
     <main class="flex-shrink-0">
        <div class="container h-100 minHeight">
-           <div class="row h-100">
+           <div class="row row-cols-1 row-cols-md-3 gy-1 h-100">
                <div class="col">
                    <div class="bg-secondary text-light h-100">Col One</div>
                </div>
