--- a/Grid5.html
+++ b/Grid5.html
@@ -62,14 +62,14 @@
 
     <main class="flex-shrink-0">
        <div class="container h-100 minHeight">
-           <div class="row h-100">
-               <div class="col">
+           <div class="row row-cols-1 row-cols-md-3 gy-1 h-100">
+               <div class="col col-md-3 order-last order-md-first">
                    <div class="bg-secondary h-100">Col One</div>
                </div>
-               <div class="col-6">
+               <div class="col col-md-6">
                    <div class="bg-dark text-light h-100">Col Two</div>
                </div>
-               <div class="col">
+               <div class="col col-md-3 order-first order-md-last">
                    <div class="bg-secondary h-100">Col Three</div>
                </div>
            </div>
