Scaffold grid layout

--- a/Grid6.html
+++ b/Grid6.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>Bootstrap And The Grids: Grid One</title>
+    <title>Bootstrap And The Grids: Grid Six</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -62,7 +62,11 @@
 
     <main class="flex-shrink-0">
        <div class="container">
-
+           <div class="row">
+               <div class="col"></div>
+               <div class="col"></div>
+               <div class="col"></div>
+           </div>
        </div>
     </main>
     <footer class="footer mt-auto py-3 bg-dark sticky-footer">
