--- a/Grid6.html
+++ b/Grid6.html
@@ -61,11 +61,17 @@
 </nav>
 
     <main class="flex-shrink-0">
-       <div class="container">
-           <div class="row">
-               <div class="col"></div>
-               <div class="col"></div>
-               <div class="col"></div>
+       <div class="container h-100 minHeight">
+           <div class="row h-100 gy-2 row-cols-1 row-cols-md-2">
+               <div class="col col-md-12">
+                   <div class="bg-secondary h-100">Col One</div>
+               </div>
+               <div class="col col-md-6 order-last">
+                   <div class="bg-dark text-light h-100">Col Two</div>
+               </div>
+               <div class="col col-md-6">
+                   <div class="bg-secondary h-100">Col Three</div>
+               </div>
            </div>
        </div>
     </main>
