--- a/Grid9.html
+++ b/Grid9.html
@@ -61,8 +61,26 @@
 </nav>
 
     <main class="flex-shrink-0">
-       <div class="container">
-
+       <div class="container-fluid h-100 minHeight">
+           <div class="row h-100 gy-2 row-cols-1 row-cols-md-2">
+               <div class="col-6 col-md-3 order-last">
+                   <div class="bg-dark text-light h-100">
+                       Col One - but ordered last
+                    </div>
+               </div>
+               <div class="col col-md-12">
+                   <div class="bg-secondary h-100">Col Main</div>
+               </div>
+               <div class="col-6 col-md-3">
+                   <div class="bg-secondary h-100">Col Two</div>
+               </div>
+               <div class="col-6 col-md-3">
+                   <div class="bg-secondary h-100">Col Three</div>
+               </div>
+               <div class="col-6 col-md-3">
+                   <div class="bg-secondary h-100">Col Four</div>
+               </div>
+           </div>
        </div>
     </main>
     <footer class="footer mt-auto py-3 bg-dark sticky-footer">
